--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ html {
 }
 @media (max-width: 425px) {
   html {
-    font-size: 10px;
+    font-size: 2vw;
   }
 }
 
@@ -44,7 +44,6 @@ body {
 header {
   z-index: 2;
   max-width: 100%;
-  min-width: 50%;
 }
 
 main {
@@ -160,7 +159,7 @@ form:focus {
 }
 
 .container--center {
-  width: 1500px;
+  width: 80%;
   height: inherit;
   margin: 0 auto;
 }
@@ -219,12 +218,12 @@ form:focus {
 .footer-content__title {
   text-transform: uppercase;
   font-size: 2em;
-  margin-bottom: 2vh;
+  margin-bottom: 2vw;
   white-space: nowrap;
 }
-@media (max-width: 425px) {
-  .footer-content__title {
-    font-size: 1em;
+@media (min-width: 425px) and (max-width: 768px) {
+  .footer-content {
+    font-size: 10px;
     margin-bottom: 1vh;
   }
 }
@@ -513,11 +512,11 @@ hr::after {
 }
 .categories .category:nth-child(1) {
   flex-basis: 100%;
-  height: 50em;
+  max-height: 50em;
 }
 .categories .category:nth-child(2) {
   flex-basis: 100%;
-  height: 50em;
+  max-height: 50em;
 }
 
 .container__top-pick,
