--- a/scss/4-Pages/Pages/_home.scss
+++ b/scss/4-Pages/Pages/_home.scss
@@ -5,7 +5,7 @@
     @for $i from 1 through 2 {
         .category:nth-child(#{$i}) {
             flex-basis: 100%;
-            height: 50em;
+            max-height: 50em;
         }
     }
 }
