Draft Login and Register php file

--- a/scss/0-Helpers/Variable/_color.scss
+++ b/scss/0-Helpers/Variable/_color.scss
@@ -6,6 +6,9 @@
 $color-bg: #ebb734;
 $color-transparent-bg: linear-gradient(45deg, #eab92d 0%, #c79810 69%);
 
+// MODAL
+$color-modal-background-transparent: rgba(0, 0, 0, 0.3);
+
 // FONT
 $color-font-1: #f0c300;
 $color-font-2: white;
