--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,7 @@
 @import "./1-Bases/initial";
 
 // 2-LAYOUTS
+@import "./2-Layouts/modal";
 @import "./2-Layouts/header";
 @import "./2-Layouts/navigation";
 @import "./2-Layouts/container-center";
