--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,113 @@ form:focus {
   border: 1px solid rgba(240, 195, 0, 0.8);
 }
 
+.modal-cover {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  text-align: center;
+  max-width: 80%;
+  max-height: 80%;
+  padding: 20px;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 20px;
+}
+.modal__title {
+  font-size: x-large;
+  margin-bottom: 20px;
+}
+.modal__social-media {
+  display: flex;
+  flex-direction: column;
+}
+.modal__social-media .btn-text-facebook {
+  background-color: #5770a6;
+  color: white;
+}
+.modal__social-media .btn-text-twitter {
+  background-color: #6db7ef;
+  color: white;
+}
+.modal__social-media .btn-text-google {
+  background-color: #e06555;
+  color: white;
+}
+.modal .btn,
+.modal input {
+  display: inline-block;
+  padding: 12px;
+  width: 100%;
+  border-radius: 4px;
+  margin: 5px 0;
+  line-height: 1em;
+}
+.modal hr {
+  margin: 1em 0;
+}
+
+.modal__social-media .btn-text-facebook {
+  background-color: #5770a6;
+  color: white;
+}
+.modal__social-media .btn-text-facebook i {
+  display: inline-block;
+  font-size: x-large;
+  width: 30px;
+}
+@media (max-width: 425px) {
+  .modal__social-media .btn-text-facebook i {
+    font-size: small;
+  }
+}
+.modal__social-media .btn-text-facebook p {
+  display: inline-block;
+}
+.modal__social-media .btn-text-twitter {
+  background-color: #6db7ef;
+  color: white;
+}
+.modal__social-media .btn-text-twitter i {
+  display: inline-block;
+  font-size: x-large;
+  width: 30px;
+}
+@media (max-width: 425px) {
+  .modal__social-media .btn-text-twitter i {
+    font-size: small;
+  }
+}
+.modal__social-media .btn-text-twitter p {
+  display: inline-block;
+}
+.modal__social-media .btn-text-google {
+  background-color: #e06555;
+  color: white;
+}
+.modal__social-media .btn-text-google i {
+  display: inline-block;
+  font-size: x-large;
+  width: 30px;
+}
+@media (max-width: 425px) {
+  .modal__social-media .btn-text-google i {
+    font-size: small;
+  }
+}
+.modal__social-media .btn-text-google p {
+  display: inline-block;
+}
+
 .header {
   z-index: 2;
   background-color: black;
