--- a/inc/components/register.html
+++ b/inc/components/register.html
@@ -25,9 +25,11 @@
                         spellcheck="false">
                     <input class="modal__password" type="password" name="password" placeholder="Password"
                         autocomplete="off" spellcheck="false">
+                    <input class="modal__retype-password" type="retype-password" placeholder="Confirm Password"
+                        autocomplete="off" spellcheck="false">
                     <div class="modal__confirm-control">
-                        <input type="submit" value="Sign In">
-                        <input type="button" value="Register">
+                        <input type="submit" value="Register">
+                        <input type="button" value="Already have account">
                     </div>
 
                     <hr class="line--border-black-content-black">
