Restructure some scss file, change extension into php

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import "./0-Helpers/Variable/size";
 @import "./0-Helpers/Variable/typography";
 
+@import "./0-Helpers/Utility/icon";
 @import "./0-Helpers/Mixin/mixin";
 
 // 1-BASES
