--- a/scss/0-Helpers/Utility/_icon.scss
+++ b/scss/0-Helpers/Utility/_icon.scss
@@ -1,3 +1,5 @@
 //  =================================
-//  BREAKPOINT
+//  ICONS
 //  =================================
+
+$social-media: "facebook" #5770a6, "twitter" #6db7ef, "google " #e06555;
