[DONE] contactus.php file

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,8 +7,8 @@
 @import "./0-Helpers/Variable/color";
 @import "./0-Helpers/Variable/size";
 @import "./0-Helpers/Variable/typography";
-
 @import "./0-Helpers/Utility/icon";
+
 @import "./0-Helpers/Mixin/mixin";
 
 // 1-BASES
@@ -26,6 +26,7 @@
 @import "./3-Modules/logo";
 @import "./3-Modules/search-bar";
 @import "./3-Modules/icon-paragraph";
+@import "./3-Modules/form";
 @import "./3-Modules/category";
 @import "./3-Modules/product";
 @import "./3-Modules/category";
