--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,6 @@ header {
 main {
   z-index: 2;
   height: fit-content;
-  float: left;
   background: linear-gradient(45deg, #eab92d 0%, #c79810 69%);
 }
 
@@ -57,12 +56,19 @@ button {
   cursor: pointer;
 }
 
+form {
+  text-align: center;
+}
 form input {
   width: 100%;
   height: 100%;
 }
 form:focus {
-  border: 1px solid rgba(240, 195, 0, 0.8);
+  border: 1px solid black;
+}
+form textarea {
+  resize: none;
+  overflow: auto;
 }
 
 .modal-cover {
@@ -79,17 +85,12 @@ form:focus {
 }
 
 .modal {
-  text-align: center;
   max-width: 80%;
   max-height: 80%;
   padding: 20px;
   background-color: white;
   border: 1px solid black;
   border-radius: 20px;
-}
-.modal__title {
-  font-size: x-large;
-  margin-bottom: 20px;
 }
 .modal__social-media {
   display: flex;
@@ -106,15 +107,6 @@ form:focus {
 .modal__social-media .btn-text-google {
   background-color: #e06555;
   color: white;
-}
-.modal .btn,
-.modal input {
-  display: inline-block;
-  padding: 12px;
-  width: 100%;
-  border-radius: 4px;
-  margin: 5px 0;
-  line-height: 1em;
 }
 .modal hr {
   margin: 1em 0;
@@ -402,6 +394,39 @@ form:focus {
   justify-content: center;
 }
 
+.form {
+  text-align: center;
+}
+.form__title {
+  font-size: x-large;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+.form__content .btn,
+.form__content input {
+  line-height: 1em;
+}
+.form__content input,
+.form__content textarea {
+  margin: 5px 0;
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  padding: 0.5rem;
+  box-shadow: inset 0 0 0.25rem #ddd;
+}
+.form__content input:focus,
+.form__content textarea:focus {
+  outline: none;
+  border: 1px solid #d0d0d0;
+  box-shadow: inset 0 0 0.5rem #d0d0d0;
+}
+.form__content input::placeholder,
+.form__content textarea::placeholder {
+  font-style: italic;
+  font-size: 0.875rem;
+}
+
 .category {
   text-align: center;
 }
@@ -648,6 +673,62 @@ hr::after {
 .list-products > * {
   margin: 0 0 3% 0;
   flex: 0 0 calc((100% - calc(3% * (4 - 1))) / 4);
+}
+
+.contactus {
+  width: 50vw;
+  height: 100%;
+  padding-bottom: 20px;
+  text-align: center;
+}
+.contactus__form {
+  padding: 5em 0;
+}
+.contactus__title {
+  font-size: 2em;
+}
+.contactus__content textarea {
+  height: 20vh;
+  min-height: 20vw;
+}
+
+hr {
+  margin: 20px auto;
+}
+
+.details__item {
+  background-color: rgba(0, 0, 0, 0.01);
+  max-height: 100%;
+  margin: 10px auto;
+  border-radius: 8px;
+  min-width: 100%;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+}
+.details__item:hover {
+  cursor: pointer;
+}
+.details__summary {
+  padding: 20px;
+  user-select: none;
+  text-align: start;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.details__summary:focus {
+  outline: none;
+}
+@media (max-width: 425px) {
+  .details__summary {
+    font-size: 2rem;
+  }
+}
+.details__content {
+  text-align: start;
+  padding: 20px;
+  border-top: 1px solid rgba(74, 49, 49, 0.3);
+  cursor: default;
+  font-weight: 300px;
+  line-height: 1.5;
 }
 
 /*# sourceMappingURL=styles.css.map */
