--- a/scss/1-Bases/_initial.scss
+++ b/scss/1-Bases/_initial.scss
@@ -22,7 +22,6 @@ header {
 main {
     z-index: 2;
     height: fit-content;
-    float: left;
     background: linear-gradient(45deg, #eab92d 0%, #c79810 69%);
 }
 
@@ -31,12 +30,19 @@ button {
 }
 
 form {
+    text-align: center;
+
     input {
         width: 100%;
         height: 100%;
     }
 
     &:focus {
-        border: 1px solid $color-border;
+        border: 1px solid black;
+    }
+
+    textarea {
+        resize: none;
+        overflow: auto;
     }
 }
