--- a/scss/1-Bases/_initial.scss
+++ b/scss/1-Bases/_initial.scss
@@ -5,7 +5,7 @@
 html {
     scroll-behavior: smooth;
     @include compatible-with-device("mobile", "l") {
-        font-size: 2vw;
+        font-size: 1rem;
     }
 }
 
