--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,7 @@
 @import "./3-Modules/category";
 @import "./3-Modules//section-header";
 @import "./3-Modules/horizontal-line-break";
+@import "./3-Modules/details-summary";
 
 // 4-PAGES
 @import "./4-Pages/index";
