[CREATE] summary and content, collection.php file successfully

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import "https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap";
-@import "https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;1,200&display=swap");
 * {
   box-sizing: border-box;
   margin: 0;
@@ -675,6 +675,53 @@ hr::after {
   line-height: 1.5;
 }
 
+.checkbox-wrapper {
+  width: 100%;
+  height: 2em;
+  display: flex;
+  flex-direction: row;
+}
+.checkbox-wrapper span {
+  display: inline-block;
+  font-size: large;
+  font-family: "Poppins", sans-serif;
+  margin-left: 1em;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: black;
+  cursor: pointer;
+}
+.checkbox-wrapper input[type=checkbox] {
+  display: inline-block;
+  height: 2em;
+  width: 2em;
+  outline: none;
+  appearance: none;
+  border: 2px solid black;
+  background-color: white;
+  position: relative;
+}
+.checkbox-wrapper input[type=checkbox]::after {
+  font-family: "Font Awesome 5 Free";
+  font-weight: bold;
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
+.checkbox-wrapper input[type=checkbox]:hover {
+  background-color: aliceblue;
+}
+.checkbox-wrapper input[type=checkbox]:checked:after {
+  display: block;
+  color: white;
+}
+.checkbox-wrapper input[type=checkbox]:checked {
+  background-color: #4c6ef5;
+}
+
 .categories {
   padding-top: 2rem;
   display: flex;
@@ -682,6 +729,7 @@ hr::after {
   flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
+  height: auto;
 }
 .categories > * {
   margin: 0 0 3% 0;
@@ -713,6 +761,7 @@ hr::after {
   flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
+  height: auto;
 }
 .list-products > * {
   margin: 0 0 3% 0;
@@ -720,21 +769,23 @@ hr::after {
 }
 
 .collection {
-  height: fit-content;
+  height: auto;
   background-color: rgba(255, 255, 255, 0.1);
   margin: 1vh auto;
   border-radius: 10px;
 }
 .collection__sidebar {
   float: left;
-  width: 30%;
-  height: 40vh;
-  border-right: 1px solid #9e9797;
+  width: 25%;
+  height: auto;
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  border-radius: 10px;
+  margin: 1% 0 0 1%;
 }
 .collection__content {
   width: 70%;
   float: right;
-  overflow-y: scroll;
+  min-height: 100vh;
 }
 .collection__content .collection__list-products {
   display: flex;
@@ -742,20 +793,26 @@ hr::after {
   flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
+  height: auto;
   justify-content: flex-start;
-  height: 100vh;
 }
 .collection__content .collection__list-products > * {
   margin: 0 0 0% 0;
   flex: 0 0 calc((100% - calc(0% * (3 - 1))) / 3);
 }
 .collection__content .collection__title {
+  text-align: center;
   padding: 2rem;
 }
 .collection::after {
   content: "";
   clear: both;
   display: table;
+}
+
+.details__item {
+  box-shadow: none;
+  background-color: transparent;
 }
 
 .contactus {
