--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,6 +33,7 @@
 @import "./3-Modules//section-header";
 @import "./3-Modules/horizontal-line-break";
 @import "./3-Modules/details-summary";
+@import "./3-Modules/checkbox";
 
 // 4-PAGES
 @import "./4-Pages/index";
