--- a/scss/0-Helpers/Variable/_typography.scss
+++ b/scss/0-Helpers/Variable/_typography.scss
@@ -2,7 +2,7 @@
 //  TYPOGRAPHY
 //  =================================
 @import "https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap";
-@import "https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;1,200&display=swap");
 
 // TYPEFACE
 $font-typeface-1: sans-serif;
