--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -470,9 +470,9 @@ form textarea {
 .category__img {
   z-index: -1;
   display: block;
-  object-fit: cover;
-  max-width: 100%;
-  max-height: 100%;
+  object-fit: fill;
+  width: 100%;
+  height: 100%;
   -webkit-filter: brightness(100%);
   filter: brightness(100%);
   transition: brightness 0.9s ease;
@@ -558,9 +558,9 @@ form textarea {
 .category__img {
   z-index: -1;
   display: block;
-  object-fit: cover;
-  max-width: 100%;
-  max-height: 100%;
+  object-fit: fill;
+  width: 100%;
+  height: 100%;
   -webkit-filter: brightness(100%);
   filter: brightness(100%);
   transition: brightness 0.9s ease;
