--- a/public/scss/3-Modules/_category.scss
+++ b/public/scss/3-Modules/_category.scss
@@ -20,9 +20,9 @@
         z-index: -1;
         display: block;
 
-        object-fit: cover;
-        max-width: 100%;
-        max-height: 100%;
+        object-fit: fill;
+        width: 100%;
+        height: 100%;
 
         -webkit-filter: brightness(100%);
         filter: brightness(100%);
