--- a/public/scss/2-Layouts/_header.scss
+++ b/public/scss/2-Layouts/_header.scss
@@ -9,12 +9,12 @@
     top: 0;
 
     &__content {
-        height: 10vh;
+        height: 60px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        max-width: 1800px;
+        max-width: 100%;
         margin: 0 auto;
     }
 
@@ -23,6 +23,6 @@
     }
 
     &__search-bar {
-        width: 380px;
+        max-width: 380px;
     }
 }
