--- a/public/scss/2-Layouts/_header.scss
+++ b/public/scss/2-Layouts/_header.scss
@@ -9,7 +9,7 @@
     top: 0;
 
     &__content {
-        height: 60px;
+        height: max-content;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
