--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -463,13 +463,15 @@ form textarea {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
   z-index: 1;
+  height: 100%;
+  width: 100%;
 }
 .category__img {
   z-index: -1;
   display: block;
-  object-fit: fill;
-  width: 100%;
+  object-fit: cover;
   height: 100%;
+  width: 100%;
   -webkit-filter: brightness(100%);
   filter: brightness(100%);
   transition: brightness 0.9s ease;
@@ -506,9 +508,9 @@ form textarea {
 }
 
 .category:hover .category__img {
-  transform: scale(1.1);
-  -webkit-filter: brightness(80%);
-  filter: brightness(80%);
+  transform: scale(1.2);
+  -webkit-filter: brightness(50%);
+  filter: brightness(50%);
 }
 .category:hover .category__info {
   visibility: visible;
@@ -551,13 +553,15 @@ form textarea {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
   z-index: 1;
+  height: 100%;
+  width: 100%;
 }
 .category__img {
   z-index: -1;
   display: block;
-  object-fit: fill;
-  width: 100%;
+  object-fit: cover;
   height: 100%;
+  width: 100%;
   -webkit-filter: brightness(100%);
   filter: brightness(100%);
   transition: brightness 0.9s ease;
@@ -594,9 +598,9 @@ form textarea {
 }
 
 .category:hover .category__img {
-  transform: scale(1.1);
-  -webkit-filter: brightness(80%);
-  filter: brightness(80%);
+  transform: scale(1.2);
+  -webkit-filter: brightness(50%);
+  filter: brightness(50%);
 }
 .category:hover .category__info {
   visibility: visible;
@@ -742,10 +746,6 @@ hr::after {
   flex: 0 0 calc((100% - calc(3% * (2 - 1))) / 2);
 }
 .categories .category:nth-child(1) {
-  flex-basis: 100%;
-  max-height: 50em;
-}
-.categories .category:nth-child(2) {
   flex-basis: 100%;
   max-height: 50em;
 }
