--- a/public/scss/3-Modules/_category.scss
+++ b/public/scss/3-Modules/_category.scss
@@ -14,15 +14,16 @@
     &__thumbnail-cover {
         @include scale-image-no-overflow-border();
         z-index: 1;
+        height: 100%;
+        width: 100%;
     }
 
     &__img {
         z-index: -1;
         display: block;
-
-        object-fit: fill;
-        width: 100%;
+        object-fit: cover;
         height: 100%;
+        width: 100%;
 
         -webkit-filter: brightness(100%);
         filter: brightness(100%);
@@ -67,9 +68,9 @@
 
 .category:hover {
     .category__img {
-        transform: scale(1.1);
-        -webkit-filter: brightness(80%);
-        filter: brightness(80%);
+        transform: scale(1.2);
+        -webkit-filter: brightness(50%);
+        filter: brightness(50%);
     }
 
     .category__info {
