--- a/public/scss/4-Pages/Pages/_home.scss
+++ b/public/scss/4-Pages/Pages/_home.scss
@@ -2,11 +2,9 @@
     padding-top: 2rem;
 
     @include responsive-flex-row-container($dir: row, $wrap: wrap, $items-per-line: 2, $gap-space: 3%);
-    @for $i from 1 through 2 {
-        .category:nth-child(#{$i}) {
-            flex-basis: 100%;
-            max-height: 50em;
-        }
+    .category:nth-child(1) {
+        flex-basis: 100%;
+        max-height: 50em;
     }
 }
 
