--- a/public/scss/0-Helpers/Mixin/_mixin.scss
+++ b/public/scss/0-Helpers/Mixin/_mixin.scss
@@ -91,3 +91,12 @@
     border-top: medium double $line;
     color: $content;
 }
+
+//  =========================================
+//  FILL THE ENTIRE DIV
+//  =========================================
+@mixin fill-entire-container() {
+    width: 100%;
+    height: 100%;
+    @content;
+}
