--- a/public/scss/3-Modules/_section-header.scss
+++ b/public/scss/3-Modules/_section-header.scss
@@ -1,6 +1,6 @@
 .section-header {
     display: inline-block;
-    margin-bottom: 20px;
+    margin-bottom: 0em;
     text-transform: uppercase;
     font-size: 2em;
     padding: 5px 10px;
@@ -9,4 +9,9 @@
     border-radius: 10px;
     margin-top: 10px;
     width: fit-content;
+    max-width: 100%;
+
+    @include compatible-with-device("laptop", "m") {
+        font-size: 1em;
+    }
 }
