--- a/public/scss/4-Pages/Pages/_home.scss
+++ b/public/scss/4-Pages/Pages/_home.scss
@@ -11,12 +11,5 @@
 .container__top-pick,
 .container__featured-collection {
     text-align: center;
-    border: none;
-    outline: none;
-    background-color: white;
-    margin: 3rem 0;
-    border-radius: 20px;
-    box-shadow: 8px 8px 30px -10px black;
+    @include container__white-paddded-box-shadow();
 }
-
-
