--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -23,6 +23,7 @@
 @import "./2-Layouts/footer";
 
 // 3-MODULES
+@import "./3-Modules/buttons";
 @import "./3-Modules/logo";
 @import "./3-Modules/search-bar";
 @import "./3-Modules/icon-paragraph";
