--- a/public/scss/1-Bases/_initial.scss
+++ b/public/scss/1-Bases/_initial.scss
@@ -4,6 +4,7 @@
 
 html {
     scroll-behavior: smooth;
+    font-size: 1rem;
     @include compatible-with-device("mobile", "l") {
         font-size: 1rem;
     }
@@ -35,7 +36,6 @@ form {
 
     input:not([type="checkbox"]) {
         width: 100%;
-        height: 100%;
     }
 
     &:focus {
