--- a/public/scss/2-Layouts/_modal.scss
+++ b/public/scss/2-Layouts/_modal.scss
@@ -14,58 +14,31 @@
 
 .modal {
     max-width: 80%;
-    max-height: 80%;
     padding: 20px;
+
     background-color: white;
     border: 1px solid black;
     border-radius: 20px;
     position: relative;
 
-    &__social-media {
-        @include flex-container($dir: column, $wrap: null);
-
-        @each $name, $bg-color in $social-media {
-            .btn-text-#{$name} {
-                background-color: #{$bg-color};
-                color: white;
-            }
-        }
+    &__textfield {
+        line-height: 3em;
+        font-size: 1em;
+        text-indent: 1em;
+        margin: 1em 0 1em 0;
     }
 
     hr {
         margin: 1em 0;
     }
 
-    //! Experimental
-    &__close-button {
+    &::before {
+        content: "x";
         position: absolute;
         top: 0;
         right: 0;
         font-size: 2rem;
         font-weight: bold;
         color: black;
-    }
-}
-
-.modal__social-media {
-    @each $name, $bg-color in $social-media {
-        .btn-text-#{$name} {
-            background-color: #{$bg-color};
-            color: white;
-
-            i {
-                display: inline-block;
-                font-size: x-large;
-                width: 30px;
-
-                @include compatible-with-device("mobile", "l") {
-                    font-size: small;
-                }
-            }
-
-            p {
-                display: inline-block;
-            }
-        }
     }
 }
