--- a/public/scss/3-Modules/_buttons.scss
+++ b/public/scss/3-Modules/_buttons.scss
@@ -7,6 +7,8 @@
     margin: 4px 2px;
     cursor: pointer;
 
+    text-transform: uppercase;
+    font-weight: 700;
     > * {
         vertical-align: middle;
     }
@@ -38,6 +40,7 @@
 
         p {
             display: inline-block;
+            text-transform: none;
         }
     }
 }
@@ -47,9 +50,12 @@
 //  =================================
 .btn-control {
     background-color: $color-bg;
-    filter: brightness(80%);
     text-transform: uppercase;
     text-align: center;
+}
+
+.btn-control[value] {
+    font-weight: 700;
 }
 
 .btn__modal-close {
